<resources>
    <string name="app_name">Mobile Pyro</string>
    <string name="prendre_une_photo">SyncronisationSCAE</string>
    <string name="entr_e">Entrer</string>
    <string name="c_est_une_fus_e">c\'est une fusée</string>
    <string name="gap_space">Bienvenue dans Mobile Pyro</string>
    <string name="premierephoto">premierePhoto</string>
    <string name="title_activity_formulaire">Formulaire :</string>
    <string name="large_text">


    </string>
    <string name="action_settings">Settings</string>
    <string name="formulaire">Formulaire :</string>
    <string name="pyrotechnicien">Pyrotechnicien :</string>
    <string name="pyrotechnicien2">Pyrotechnicien</string>
    <string name="test">Test</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="capturer_un_qrcode">Capturer un QRcode</string>
    <string name="nom_du_projet">Nom du projet</string>
    <string name="nom_du_pyrotechnicien">Nom du pyrotechnicien</string>
    <string name="type_de_casing">Type de casing</string>
    <string name="testestetstettetet">testestetstettetet</string>
    <string name="nom_du_maitre_doeuvre">Nom du maitre d\'oeuvre</string>
    <string name="numero_id">Numéro identification</string>
    <string name="nef_progergol">Référence du lot de propergol</string>
    <string name="date_De_Fabrication">Date de fabrication</string>
    <string name="numero_id_chargepro">Numéro identification du lot</string>
    <string name="masse_de_matiere_active">Masse de matière active</string>
    <string name="impedance">Impédance de l\'inflammateur</string>
    <string name="impedanceLigne">Impédance de la ligne</string>
    <string name="date_heure_lancement">Date et heure de lancement</string>
    <string name="qualite">Qualité du vol</string>
    <string name="incident">Incident</string>
    <string name="commentaire">Commentaire</string>
    <string name="reference_propulseur">Référence propulseur</string>
    <string name="prendre_un_QRcode">Capturer un QR code</string>
    <string name="choose_the_time">Choisir l\'heure</string>
    <string name="deuxiemephoto">deuxieme photo</string>
    <string name="troisiemephoto">troisiemephoto</string>
    <string name="quatriemephoto">quatriemephoto</string>
    <string name="cinqietephoto">cinquiete photo</string>
    <string name="Enregistrer">Enregistrer</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Mainteant">Maintenant</string>
    <string name="LOGODUCNES">LOGODUCNES</string>
    <string name="TROISLOGO">Trois_logos</string>
    <string name="sixiemephoto">sixiemePhoto</string>
    <string name="septiemePhoto">septieme Photo</string>
    <string name="huitiemephoto">huitiemePhoto</string>
    <string name="nueviemephoto">neuviemePhoto</string>
    <string name="dixiemePhoto">dixiemePhoto</string>
    <string name="merci_de_rentrer_votre_cl_e_api">Merci de rentrer votre clée API :</string>
    <string name="Creer_un_QR_Code">Creer un QR code</string>
    <string name="propulseur1">Propulseur n°1 :</string>
    <string name="propulseur2">Propulseur n°2 :</string>
    <string name="propulseur3">Propulseur n°3 :</string>
    <string name="choixduprojet">Choix du projet :</string>
    <string name="j_ai_choisi">J\'ai choisi</string>
    <string name="Recuperer_Projets">Recuperer Projets</string>
    <string name="recuperer_scae">Recuperer SCAE</string>
    <string name="projet">Projet</string>
</resources>
